# DrogonMessenger

./: .gitignore  CMakeLists.txt
AuthService/: CMakeLists.txt  README.md  docker-compose.yml  openapi.yaml
AuthService/migrations/: 001_create_users_table.sql
AuthService/src/: config.json  main.cpp
AuthService/src/controllers/: authController.cpp  authController.h
AuthService/src/dto/: userDtro.hpp
AuthService/src/middlewares/: TokenExtractionMiddleware.hpp  ValidateEmailAndUsernameMiddleware .hpp  ValidatePasswordMiddleware .hpp  ValidateRequestBodyMiddleware.hpp  ValidateTokensMiddleware.hpp
AuthService/src/models/: user.hpp
AuthService/src/repositories/: sessionRepos.cpp  sessionRepos.hpp  userRepos.cpp  userRepos.hpp
AuthService/src/services/: serviceAuth.cpp  serviceAuth.hpp
AuthService/src/utils/jwt/: jwtToken.hpp
AuthService/tests/: serviseAuth.cpp
MessagingService/: CMakeLists.txt  docker-compose.yml
MessagingService/libs/jwt-cpp/docs/: Doxyfile  faqs.md  install.md
MessagingService/libs/jwt-cpp/include/jwt-cpp/: jwt.h
MessagingService/libs/jwt-cpp/nuget/: jwt-cpp.nuspec
MessagingService/migrations/: 000_create_schema_migrations.sql  001_create_message_table.sql
MessagingService/src/: config.json  main.cpp
MessagingService/src/controllers/: exempleReq.js  webSocketController.cc  webSocketController.h
MessagingService/src/filters/: authFilter.hpp
MessagingService/src/models/: chat.hpp  message.hpp
MessagingService/src/services/: chatManagerService.hpp
MessagingService/src/utils/: getCurrentTime.hpp  isValidJwtToken.hpp
